fix css for better visibility on mobile

--- a/src/app/views/game/components/player-name/player-name.component.css
+++ b/src/app/views/game/components/player-name/player-name.component.css
@@ -1,5 +1,10 @@
 .mat-card {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 8px;
     background-color: #f2f2f2;
+}
+
+.player-info mat-card-header {
+    height: 25px;
 }
