--- a/src/app/views/game/components/standard-play-board/standard-play-board.component.css
+++ b/src/app/views/game/components/standard-play-board/standard-play-board.component.css
@@ -5,5 +5,6 @@
 
 .mat-card {
     margin-bottom: 5px;
+    padding: 8px;
     background-color: #f2f2f2;
 }
