--- a/src/app/views/game/containers/game-view/game-view.component.css
+++ b/src/app/views/game/containers/game-view/game-view.component.css
@@ -8,9 +8,6 @@ mat-tab {
 }
 
 .action-buttons {
-    position: fixed;
-    bottom:0;
-    left:0;
     display: flex;
     justify-content: space-between;
     width: 100%;
